Actualizar Force Gym para despliegue y QR